fixed alignment

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -78,7 +78,6 @@ h1{
     top: -50%;
     background-color: #ffffff;
     font-family: 'Georgia', Times, 'Times New Roman', serif;
-    text-align: center;
 }
 #abouttitle{
     color:#4aaaa5;
